--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+    font-family: "Beaufort";
+    src: url("../public/BeaufortForLoL-OTF/BeaufortforLOL-Regular.otf");
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+    font-family: "Beaufort";
+    src: url("../public/BeaufortForLoL-OTF/BeaufortforLOL-Bold.otf");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: "Beaufort";
+    src: url("../public/BeaufortForLoL-OTF/BeaufortforLOL-Heavy.otf");
+    font-weight: "bolder";
+}
+
+@font-face {
+    font-family: "Beaufort";
+    src: url("../public/BeaufortForLoL-OTF/BeaufortforLOL-Light.otf");
+    font-weight: "light";
 }
